{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 3,
  "lineage": "3fe909f1-7b8a-3936-bf2d-52962716b56f",
  "resources": [
    {
      "module": "module.yugabyte-db-cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "YugaByte-Firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9000",
                  "7000",
                  "6379",
                  "9042",
                  "5433",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-12T05:05:15.277-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-yugabyte-test-yugabyte-k3s-firewall",
            "name": "default-yugabyte-test-yugabyte-k3s-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/networks/default",
            "priority": 1000,
            "project": "omni-163105",
            "self_link": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/firewalls/default-yugabyte-test-yugabyte-k3s-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "yugabyte-test-yugabyte-k3s"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.yugabyte-db-cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "YugaByte-Intra-Firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7100",
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-12T05:05:15.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-yugabyte-test-yugabyte-k3s-intra-firewall",
            "name": "default-yugabyte-test-yugabyte-k3s-intra-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/networks/default",
            "priority": 1000,
            "project": "omni-163105",
            "self_link": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/firewalls/default-yugabyte-test-yugabyte-k3s-intra-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "yugabyte-test-yugabyte-k3s"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.yugabyte-db-cluster",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "yugabyte_node",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-6-v20190813",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/omni-163105/zones/us-east1-b/disks/yugabyte-test-yugabyte-k3s-n1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "yugabyte-test-yugabyte-k3s-n1",
            "instance_id": "2278964272863611539",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "sshKeys": "manish:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHO7LbRKwcITKdKtVSGwZAcFOPcpLmpqhCxIfzobg/xbepBhrYYg6eQovqvniKuTaf281MlQg4vmwxDgQlAqfiut/qugRT5fo+75pxfd8fI6dWkRsrg+YpmsgewldtTNQ+YRSoy0OwRJUDsq9LDUfnG1zvym38+P4drEyOi7Ktbz1CjQvNoH1JY3V6TH6umBbvzqUjaXihTxMZbj2BQFFULls3RfWpJkhvZ9j4Qa6o8yZs9KQMls2DiCrpmqEfsixxY1DtsilJ4u/e1QrBQJgL9iCxaMBRaRP3Vz2ofvq0AP/h+uW0aSjyDsVjX9TuO4LyR7U2Sv+92fKok3ocaAtJvL1lwMVZgrD3YiXTyl6L+k6vUlrjPBSRMQB/PFXR9oSgQkJFhgIwszAzEWUNsLO1+tj41VhPoI7zH45Q/4Jo2Gg [...]
            },
            "metadata_fingerprint": "sdB1tZegRb4=",
            "name": "yugabyte-test-yugabyte-k3s-n1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.68.44",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/networks/default",
                "network_ip": "10.142.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/us-east1/subnetworks/default",
                "subnetwork_project": "omni-163105"
              }
            ],
            "project": "omni-163105",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/omni-163105/zones/us-east1-b/instances/yugabyte-test-yugabyte-k3s-n1",
            "tags": [
              "yugabyte-test-yugabyte-k3s"
            ],
            "tags_fingerprint": "02yCrUYtrJc=",
            "zone": "us-east1-b"
          },
          "depends_on": [
            "data.google_compute_image.YugaByte_DB_Image",
            "data.google_compute_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-6-v20190813",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/omni-163105/zones/us-east1-c/disks/yugabyte-test-yugabyte-k3s-n2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "yugabyte-test-yugabyte-k3s-n2",
            "instance_id": "55357887229692564",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "sshKeys": "manish:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHO7LbRKwcITKdKtVSGwZAcFOPcpLmpqhCxIfzobg/xbepBhrYYg6eQovqvniKuTaf281MlQg4vmwxDgQlAqfiut/qugRT5fo+75pxfd8fI6dWkRsrg+YpmsgewldtTNQ+YRSoy0OwRJUDsq9LDUfnG1zvym38+P4drEyOi7Ktbz1CjQvNoH1JY3V6TH6umBbvzqUjaXihTxMZbj2BQFFULls3RfWpJkhvZ9j4Qa6o8yZs9KQMls2DiCrpmqEfsixxY1DtsilJ4u/e1QrBQJgL9iCxaMBRaRP3Vz2ofvq0AP/h+uW0aSjyDsVjX9TuO4LyR7U2Sv+92fKok3ocaAtJvL1lwMVZgrD3YiXTyl6L+k6vUlrjPBSRMQB/PFXR9oSgQkJFhgIwszAzEWUNsLO1+tj41VhPoI7zH45Q/4Jo2Gg [...]
            },
            "metadata_fingerprint": "sdB1tZegRb4=",
            "name": "yugabyte-test-yugabyte-k3s-n2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.195.72",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/omni-163105/global/networks/default",
                "network_ip": "10.142.0.14",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/omni-163105/regions/us-east1/subnetworks/default",
                "subnetwork_project": "omni-163105"
              }
            ],
            "project": "omni-163105",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/omni-163105/zones/us-east1-c/instances/yugabyte-test-yugabyte-k3s-n2",
            "tags": [
              "yugabyte-test-yugabyte-k3s"
            ],
            "tags_fingerprint": "02yCrUYtrJc=",
            "zone": "us-east1-c"
          },
          "depends_on": [
            "data.google_compute_image.YugaByte_DB_Image",
            "data.google_compute_zones.available"
          ]
        }
      ]
    }
  ]
}